Update to  current version

--- a/index.html
+++ b/index.html
@@ -114,30 +114,33 @@
 
                 <div class="container">
                   <div class = "blockNoteContainer">
+
                     <div class = "box1">
                       <div class="imgHover imgTransform1">
-                          <img id="imgBCaPropos" class="imgApropos" src="img/BlockNote3.png">
+                          <img id="imgBCaPropos" class="imgService" src="img/BN_Apropos.png">
                       </div>
                     </div>
+
                     <div class = "box2">
                       <div class="imgHover imgTransform2">
-                          <img id="imgBCEnsegment" class="imgApropos" src="img/BlockNote3.png">
+                          <img id="imgBCEnsegment" class="imgService" src="img/BN_Enseignement.png">
                       </div>
                     </div>
-                    <!-- <div class = "box3">
+
+                    <div class = "box3">
                       <div class="imgHover imgTransform3">
-                          <img id="imgTest1" src="img/BlockNote3.png">
+                          <img id="imgBCTraduction" class="imgService" src="img/BN_Traduction.png">
                       </div>
                     </div>
-                    <div class = "box2">
-                      <div class="imgHover">
-                          <img id="imgTest1" src="img/BlockNote3.png">
+
+                    <div class = "box4">
+                      <div class="imgHover imgTransform4">
+                          <img id="imgBCContact" class="imgService" src="img/BN_Contact.png">
                       </div>
-                    </div> -->
+                    </div>
+
                   </div>
-
-
-
+                </div>
           </section>
         </div>
 
@@ -204,11 +207,11 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h3 class="modal-title">À propos</h3>
           </br>
-          <p class="bodyPolice">
+          <p class="bodyCenterPolice">
             Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’une Maîtrise FLE de l’Université d’Artois à Arras,
             je traduis et enseigne depuis plusieures années en tant qu'indépendante et également à l'université de Montpellier.
           </p>
-          <p class="bodyPolice">
+          <p class="bodyCenterPolice">
             J'aime les langues et surtout partager cette passion. Je parle français, russe, anglais et espagnol.
             Je cherche à allier le plaisir et l’efficacité en adaptant mes méthodes à vos besoins. L’interculturalité occupe une place
             importante pour moi dans la traduction comme dans l’enseignement.
@@ -235,25 +238,89 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h3 class="modal-title">Enseignement</h3>
           </br>
-          <p class="bodyPolice">
+          <p class="bodyCenterPolice">
             Ensemble nous allons apprendre la langue et la culture française !
           </p>
         </br>
-          <p class="bodyPolice"><span class="glyphicon glyphicon-sunglasses"></span>&nbsp;Sorties culturelles individuelles ou en groupe sur la région de Montpellier</p>
+          <p class="bodyCenterPolice"><img  src="icon/photo.png" class="iconPolice"></img>&nbsp;Sorties culturelles individuelles ou en groupe sur la région de Montpellier</p>
 
-          <p class="bodyPolice"><img class="icon1"></<img>&nbsp;Cours de français langue étrangère tous niveaux</p>
+          <p class="bodyCenterPolice"><img src = "icon/paris.png" class="iconPolice"></img>Cours de français langue étrangère tous niveaux</p>
 
-          <p class="bodyPolice"><span class="glyphicon glyphicon-sunglasses"></span>&nbsp;Cours particuliers ou en groupe (professionnel)</p>
+          <p class="bodyCenterPolice"><img  src="icon/chat.png" class="iconPolice"></img>&nbsp;Cours particuliers ou en groupe (professionnel)</p>
 
-          <p class="bodyPolice"><span class="glyphicon glyphicon-sunglasses"></span>&nbsp;Ressources pédagogiques personnalisées</p>
+          <p class="bodyCenterPolice"><img  src="icon/pdf.ico" class="iconPolice"></img>&nbsp;Ressources pédagogiques personnalisées</p>
 
-          <p class="bodyPolice"><span class="glyphicon glyphicon-education"></span>&nbsp;Préparation aux examens</p>
+          <p class="bodyCenterPolice"><img  src="icon/Graduation.png" class="iconPolice"></img>&nbsp;Préparation aux examens</p>
 
-          <p class="bodyPolice"><span class="glyphicon glyphicon-sunglasses"></span>&nbsp;Cours de français sur objectifs spécifiques à la demande</p>
+          <p class="bodyCenterPolice"><img  src="icon/check.png" class="iconPolice"></img>&nbsp;Cours de français sur objectifs spécifiques à la demande</p>
 
-          <p class="bodyPolice"><span class="glyphicon glyphicon-sunglasses"></span>&nbsp;Cours dispensés en ligne, chez vous ou bien dans vos locaux professionnels.</p>
+          <p class="bodyCenterPolice"><img  src="icon/mail.png" class="iconPolice"></img>&nbsp;Cours dispensés en ligne, chez vous ou bien dans vos locaux professionnels.</p>
 
-          <p class="bodyPolice">Pour toutes demandes de tarifs, merci de me contacter par e-mail en expliquant vos besoins.</p>
+          <p class="bodyCenterPolice">Pour toutes demandes de tarifs, merci de me contacter par e-mail en expliquant vos besoins.</p>
+          </br>
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal Traduction -->
+  <div id="traduction" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <!-- <div class="modal-header">
+        </div> -->
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">Traduction</h3>
+          </br>
+          <p class="bodyLeftPolice">
+            Traduction professionnelle et adaptation interculturelle. Faites-moi confiance pour mieux comprendre une langue !
+          </p>
+          </br>
+          <p class="bodyLeftPolice">
+          Langues proposées :
+          </p>
+          </br>
+          <p><b>Français : </b>Traduction et mise en page professionnelle du français vers le russe.</p>
+          </br>
+          <p><b>Russe : </b>Traduction et mise en page professionnelle du russe vers le français.</p>
+          </br>
+          <p><b>Anglais : </b>Traduction et mise en page professionnelle de l’anglais vers le français ou vers le russe.</p>
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div> -->
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal A Propos -->
+  <div id="contactModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <!-- <div class="modal-header">
+        </div> -->
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">À propos</h3>
+          </br>
+          <p class="bodyCenterPolice">
+            Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’une Maîtrise FLE de l’Université d’Artois à Arras,
+            je traduis et enseigne depuis plusieures années en tant qu'indépendante et également à l'université de Montpellier.
+          </p>
+          <p class="bodyCenterPolice">
+            J'aime les langues et surtout partager cette passion. Je parle français, russe, anglais et espagnol.
+            Je cherche à allier le plaisir et l’efficacité en adaptant mes méthodes à vos besoins. L’interculturalité occupe une place
+            importante pour moi dans la traduction comme dans l’enseignement.
+          </p>
+          </br>
+          <p class="gras_italique_serif"><i>« Grâce aux langues, on est chez soi n’importe où »</i> – Edmund de Waal</p>
           </br>
         </div>
         <!-- <div class="modal-footer">
@@ -291,6 +358,12 @@
               });
             $('#imgBCEnsegment').click(function(){
               $('#enseignement').modal('show')
+              });
+            $('#imgBCTraduction').click(function(){
+              $('#traduction').modal('show')
+              });
+            $('#imgBCContact').click(function(){
+              $('#contactModal').modal('show')
               });
             });
         </script>
