Add Form and Php

--- a/index.html
+++ b/index.html
@@ -299,33 +299,90 @@
     </div>
   </div>
 
-  <!-- Modal A Propos -->
+  <!-- Modal Contact -->
   <div id="contactModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg">
       <!-- Modal content-->
       <div class="modal-content">
-        <!-- <div class="modal-header">
-        </div> -->
         <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 class="modal-title">À propos</h3>
-          </br>
-          <p class="bodyCenterPolice">
-            Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’une Maîtrise FLE de l’Université d’Artois à Arras,
-            je traduis et enseigne depuis plusieures années en tant qu'indépendante et également à l'université de Montpellier.
-          </p>
-          <p class="bodyCenterPolice">
-            J'aime les langues et surtout partager cette passion. Je parle français, russe, anglais et espagnol.
-            Je cherche à allier le plaisir et l’efficacité en adaptant mes méthodes à vos besoins. L’interculturalité occupe une place
-            importante pour moi dans la traduction comme dans l’enseignement.
-          </p>
-          </br>
-          <p class="gras_italique_serif"><i>« Grâce aux langues, on est chez soi n’importe où »</i> – Edmund de Waal</p>
-          </br>
+
+          <div class="formBody">
+           <div class="row">
+               <div class="col-xl-8 offset-xl-2 py-5">
+
+                   <h1>Contact</h1>
+                   <p class="lead">Pour me contacter rien de plus simple</p>
+
+                   <form id="contact-form" method="post" action="contact.php" role="form">
+                       <div class="messages"></div>
+                       <div class="controls">
+                           <div class="row">
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <label for="form_name">Firstname *</label>
+                                       <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                                       <div class="help-block with-errors"></div>
+                                   </div>
+                               </div>
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <label for="form_lastname">Lastname *</label>
+                                       <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                                       <div class="help-block with-errors"></div>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="row">
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <label for="form_email">Email *</label>
+                                       <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                                       <div class="help-block with-errors"></div>
+                                   </div>
+                               </div>
+                               <div class="col-md-6">
+                                   <div class="form-group">
+                                       <label for="form_need">Please specify your need *</label>
+                                       <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
+                                           <option value=""></option>
+                                           <option value="Request quotation">Teaching</option>
+                                           <option value="Request order status">Translate</option>
+                                           <option value="Other">Other</option>
+                                       </select>
+                                       <div class="help-block with-errors"></div>
+                                   </div>
+                               </div>
+                           </div>
+                           <div class="row">
+                               <div class="col-md-12">
+                                   <div class="form-group">
+                                       <label for="form_message">Message *</label>
+                                       <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                       <div class="help-block with-errors"></div>
+                                   </div>
+                               </div>
+                               <div class="col-md-12">
+                                   <input type="submit" class="btn btn-success btn-send" value="Send message">
+                               </div>
+                           </div>
+                         </br>
+                           <div class="row">
+                               <div class="col-md-12">
+                                   <p class="text-muted">
+                                       <strong>*</strong> These fields are required. Contact form template by
+                                       <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form" target="_blank">Bootstrapious</a>.</p>
+                               </div>
+                           </div>
+                       </div>
+
+                   </form>
+
+               </div>
+
+           </div>
+
         </div>
-        <!-- <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div> -->
+
       </div>
     </div>
   </div>
