--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 
           <div class="formBody">
            <div class="row">
+             <div class="col-sm-6">
                <div class="col-xl-8 offset-xl-2 py-5">
 
                    <h1>Contact</h1>
@@ -369,15 +370,53 @@
                            <div class="row">
                                <div class="col-md-12">
                                    <p class="text-muted">
-                                       <strong>*</strong> These fields are required. Contact form template by
-                                       <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form" target="_blank">Bootstrapious</a>.</p>
+                                       <strong>*</strong> These fields are required.</p>
                                </div>
                            </div>
                        </div>
-
                    </form>
-
                </div>
+             </div>
+
+             <div class="col-sm-6" style="background-color:black;">
+                     <!-- SECTION CONTACT -->
+                     <div id="contact" class="contact-info">
+                         <div class="container">
+                                 <h1>Nous rendre visite</h1>
+                                     <address>
+                                         <strong>Anastasia Teaching</strong><br>
+                                         11 rue de Lille<br>
+                                         59000, Lille<br>
+                                         Tel: (+33) 320 000 000
+                                       </address>
+
+                                       <address>
+                                         <strong>Direct Mail Concat</strong><br>
+                                         <a href="mailto:#">contact@Test.com</a>
+                                       </address>
+
+                                   <h1>Me suivre</h1>
+                                   <ul class="list-inline ">
+
+                                       <!--  CI-DESSOUS POUR CHANGER LES LIENS VERS VOS RESEAUX SOCIAUX  :  href="ici votre lien " -->
+                                       <li>
+                                           <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a>
+                                       </li>
+                                       <li>
+                                           <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-facebook"></i></a>
+                                       </li>
+                                       <li>
+                                           <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-twitter"></i></a>
+                                       </li>
+                                       <li>
+                                           <a href="#" class="btn-social btn-outline"><i class="fa fa-2x  fa-vine"></i></a>
+                                       </li>
+                                   </ul>
+
+                         </div>
+                   </div>
+
+             </div>
 
            </div>
 
