--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
         <title>Anastasia Traduction</title>
 
         <!-- Lien vers le fichier d'icones" -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
 
 
         <!-- Custom style -->
-        <!-- <link rel="stylesheet" href="css/main.css">-->
+        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/design.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/slideshow.css">
+
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
         <!-- liens vers pagepiling effet-->
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
@@ -42,19 +44,9 @@
                     <h5>
                       <font color="white"> Translation & Teaching</span>
                     </h5>
-        					<!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse-menu">
-        						<span class="sr-only"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-        					</button>
-        					<a class="navbar-brand" href="index.html">Anastasia Traduction</a> -->
         				</div>
         				  <div class="collapse navbar-collapse" id="collapse-menu">
         					<ul class="nav navbar-nav navbar-right">
-        						<!-- <li class="active"><a href="#mainsection">Home</a></li>
-        						<li class="page-scroll"><a href="#sectionService">Services</a></li>
-        						<li class="page-scroll"><a href="#contact">Contact</a></li> -->
                     <li data-menuanchor="Home"><a href="#Home">Home</a></li>
                     <li data-menuanchor="page2"><a href="#page2">Page 2</a></li>
                     <li data-menuanchor="page3"><a href="#page3">Page 3</a></li>
@@ -147,9 +139,44 @@
 
         <div class="section" id="contact">
               <!-- SECTION CONTACT -->
-              <div id="retours" class="contact-info">
-                  <div class="container">
-                      <div class="footer-col col-md-6 text-center">
+              <!--<div id="retours" class="contact-info">
+                   <div class="container"> -->
+
+                   <div class="bs-example">
+                       <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                           <!-- Carousel indicators -->
+                           <ol class="carousel-indicators">
+                               <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                               <li data-target="#myCarousel" data-slide-to="1"></li>
+                               <li data-target="#myCarousel" data-slide-to="2"></li>
+                           </ol>
+                           <!-- Wrapper for carousel items -->
+                           <div class="carousel-inner">
+                               <div class="carousel-item active">
+                                   <img src="img/slide1.png" alt="First Slide">
+                                   <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                               </div>
+                               <div class="carousel-item">
+                                   <img src="img/slide2.png" alt="Second Slide">
+                               </div>
+                               <div class="carousel-item">
+                                   <img src="img/slide3.png" alt="Third Slide">
+                               </div>
+                           </div>
+                           <!-- Carousel controls -->
+                           <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                               <span class="carousel-control-prev-icon"></span>
+                           </a>
+                           <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                               <span class="carousel-control-next-icon"></span>
+                           </a>
+                       </div>
+                   </div>
+
+                       <!-- <div class="footer-col col-md-6 text-center">
                           <h1>Nous rendre visite</h1>
                               <address>
                                   <strong>Frugal Solution</strong><br>
@@ -166,10 +193,10 @@
 
                         <div class="footer-col col-md-6 text-center">
                             <h1>Nous suivre</h1>
-                            <ul class="list-inline ">
+                            <ul class="list-inline "> -->
 
                                 <!--  CI-DESSOUS POUR CHANGER LES LIENS VERS VOS RESEAUX SOCIAUX  :  href="ici votre lien " -->
-                                <li>
+                              <!--  <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a>
                                 </li>
                                 <li>
@@ -182,10 +209,10 @@
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-2x  fa-vine"></i></a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
 
-                  </div>
-            </div>
+                 <!-- </div>
+            </div>-->
           </div>
 
           <!-- Footer
@@ -422,17 +449,16 @@
   <!-- ================================= End MODALS ================================= -->
 
         <!-- Script Javascript -->
-        <script src="bootstrap/js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="bootstrap/js/plugins.js"></script>
-        <script src="bootstrap/js/main.js"></script>
-		    <script src="bootstrap/js/bootstrap.js"></script>
-
+        <!-- <script src="bootstrap/js/vendor/modernizr-2.8.3.min.js"></script> -->
+        <!-- <script src="bootstrap/js/plugins.js"></script> -->
+        <!-- <script src="bootstrap/js/main.js"></script> -->
+		    <!-- <script src="bootstrap/js/bootstrap.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
         <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
-
         <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
 
         <script type="text/javascript">
            $(document).ready(function() {
@@ -458,7 +484,6 @@
               });
             });
         </script>
-
 
     </body>
 </html>
