--- a/Test.html
+++ b/Test.html
@@ -12,20 +12,20 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <!-- Custom style -->
-        <!-- <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/design.css"> -->
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/design.css">
         <link rel="stylesheet" href="css/slideshow.css">
 
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     </head>
 
     <body>
-      <!-- <div class="bs-example">
+      <div class="bs-example">
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
               <ol class="carousel-indicators">
@@ -57,7 +57,78 @@
                   <span class="carousel-control-next-icon"></span>
               </a>
           </div>
-      </div> -->
+      </div>
+
+            <!-- ******************  -->
+
+      <div class="container">
+
+  <div id="myCarousel" class="carousel slide vertical">
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+      <div class="active item">
+        <img src="http://placehold.it/1170x400&amp;text=First+Slide">
+      </div>
+      <div class="item">
+        <img src="http://placehold.it/1170x400&amp;text=Second+Slide">
+      </div>
+      <div class="item">
+        <img src="http://placehold.it/1170x400&amp;text=Third+Slide">
+      </div>
+    </div>
+
+    <!-- Carousel nav -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+
+  </div>
+
+</div>
+
+      <!-- ******************  -->
+      <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+
+                <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">First Slide</h2>
+                    <p class="lead">This is a description for the first slide.</p>
+                  </div>
+                </div>
+
+                <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">Second Slide</h2>
+                    <p class="lead">This is a description for the second slide.</p>
+                  </div>
+                </div>
+
+                <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">Third Slide</h2>
+                    <p class="lead">This is a description for the third slide.</p>
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+            </div> -->
+
+<!-- *********************************** -->
+
+
+<!-- ****************************** -->
 
 
       <!-- <div  class="carousel slide" data-ride="carousel">
@@ -79,7 +150,7 @@
 
       <!-- ******************with  CSS********************** -->
 
-      <span id="sl_play" class="sl_command"></span>
+      <!-- <span id="sl_play" class="sl_command"></span>
     	<span id="sl_pause" class="sl_command"></span>
 
     	<span id="sl_i1" class="sl_command sl_i"></span>
@@ -108,16 +179,16 @@
                     <figure>
                         <img src="img/slide1.png" alt="" width="640" height="310" />
                         <figcaption>The mirror of soul</figcaption>
-                    </figure><!--
-                    --><figure>
+                    </figure>
+                    <figure>
                         <img src="img/slide2.png" alt="" width="640" height="310" />
                         <figcaption>Let's cross that bridge when we come to it</figcaption>
-                    </figure><!--
-                    --><figure>
+                    </figure>
+                    <figure>
                         <img src="img/slide3.png" alt="" width="640" height="310" />
                         <figcaption>Sushi<em>(do)</em> time</figcaption>
-                    </figure><!--
-                    --><figure>
+                    </figure>
+                    <figure>
                         <img src="img/coffee-mac8.jpg" alt="" width="640" height="310" />
                         <figcaption>Waking Life</figcaption>
                     </figure>
@@ -126,15 +197,15 @@
             <span id="timeline"></span>
 
 
-    		<ul class="dots_commands"><!--
-    			--><li><a title="Afficher la slide 1" href="#sl_i1">Slide 1</a></li><!--
-    			--><li><a title="Afficher la slide 2" href="#sl_i2">Slide 2</a></li><!--
-    			--><li><a title="Afficher la slide 3" href="#sl_i3">Slide 3</a></li><!--
-    			--><li><a title="Afficher la slide 4" href="#sl_i4">Slide 4</a></li>
+    		<ul class="dots_commands">
+    			<li><a title="Afficher la slide 1" href="#sl_i1">Slide 1</a></li>
+    			<li><a title="Afficher la slide 2" href="#sl_i2">Slide 2</a></li>
+    			<li><a title="Afficher la slide 3" href="#sl_i3">Slide 3</a></li>
+    			<li><a title="Afficher la slide 4" href="#sl_i4">Slide 4</a></li>
     		</ul>
 
 
-        </section>
+        </section> -->
     	<!-- / end of #slideshow -->
 
 </br></br></br></br></br>
@@ -186,23 +257,20 @@
 
 
       <!-- Script Javascript -->
-      <!-- <script src="bootstrap/js/vendor/modernizr-2.8.3.min.js"></script>
-      <script src="bootstrap/js/plugins.js"></script>
-      <script src="bootstrap/js/main.js"></script> -->
+       <script src="bootstrap/js/vendor/modernizr-2.8.3.min.js"></script>
+       <script src="bootstrap/js/plugins.js"></script>
+      <!--  <script src="bootstrap/js/main.js"></script> -->
       <!-- <script src="bootstrap/js/bootstrap.js"></script> -->
 
-
-
-      <!-- <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
+      <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
       <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
       <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
       <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
-
 
 
     </body>
