--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
         <!-- Custom style -->
+        <link rel="stylesheet" href="css/zoomGlass.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/design.css">
         <link rel="stylesheet" href="css/slideshow.css">
         <link rel="stylesheet" href="css/turn.css">
+
 
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -137,79 +139,17 @@
         </div>
 
 
-        <div class="section" id="contact">
+        <div class="section" id="feedback">
+         <section id="feedbackSection">
 
+           <div id ="bookFeedbackID" class="bookFeedback">
+             <img class="magniflier" src="img/openBook4.png"/>
+           </div>
+         </section>
               <!-- SECTION Feedback -->
-              <!-- <div class="card">
-                <div class="imgBox">
-                  <div class="bark"></div>
-                  <img src="https://image.ibb.co/fYzTrb/lastofus.jpg">
-                </div>
-                <div class="details">
-                  <h4 class="color1">Feedback from United States</h2>
-                    <br/><br/>
-
-                      <p>Anastasia is such a fun, caring,</p>
-                      <p>enthusiastic, and rigorous teacher.</p>
-                      <p>Anastasia ensures her students develop</p><p> strong French language skills</p>
-                      <p>in all areas of reading, writing, </p><p>speaking, and listening by incorporating </p>
-                      <p>methods and materials that would</p><p> work best for them.</p>
-                      <p class="text-right">Sanghee Lee</p>
-                </div>
-              </div> -->
-
 
               <!--<div id="retours" class="contact-info">
                    <div class="container"> -->
-
-                   <div class="bs-example">
-                       <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-                           <ol class="carousel-indicators">
-                               <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                               <li data-target="#myCarousel" data-slide-to="1"></li>
-                               <li data-target="#myCarousel" data-slide-to="2"></li>
-                           </ol>
-
-                           <div class="carousel-inner">
-                               <div class="carousel-item active">
-                                   <img src="img/slide1.png" alt="First Slide">
-                                   <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                               </div>
-                               <div class="carousel-item">
-                                   <img src="img/slide2.png" alt="Second Slide">
-                               </div>
-                               <div class="carousel-item">
-                                   <img src="img/slide3.png" alt="Third Slide">
-                               </div>
-                           </div>
-
-                           <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                               <span class="carousel-control-prev-icon"></span>
-                           </a>
-                           <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                               <span class="carousel-control-next-icon"></span>
-                           </a>
-                       </div>
-                   </div>
-
-
-                  <!-- <div  class="carousel slide" data-ride="carousel">
-                     <div class="w3-content w3-display-container" >
-                       <div class="carousel-item active">
-                       <img class="mySlides w3-animate-right" src="img/slide1.png" style="width:100%">
-
-                       <img class="mySlides w3-animate-right" src="img/slide2.png" style="width:100%">
-
-                       <img class="mySlides w3-animate-right" src="img/slide3.png" style="width:100%">
-                      </div>
-
-                       <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-                       <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-                   </div> -->
 
 
                        <!-- <div class="footer-col col-md-6 text-center">
@@ -474,13 +414,13 @@
                                    </ul>
                          <!-- </div> -->
                    </div>
-             </div>
-           </div>
+                 </div>
+               </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
   <!-- ================================= End MODALS ================================= -->
 
@@ -494,6 +434,7 @@
         <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
         <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+        <script src="js/zoomEffect.js"></script>
 
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> -->
@@ -524,40 +465,7 @@
               });
             });
         </script>
-        <!-- <script>
-          var slideIndex = 1;
-          showDivs(slideIndex);
 
-          function plusDivs(n) {
-            showDivs(slideIndex += n);
-          }
-
-          function showDivs(n) {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            if (n > x.length) {slideIndex = 1}
-            if (n < 1) {slideIndex = x.length}
-            for (i = 0; i < x.length; i++) {
-              x[i].style.display = "none";
-            }
-            x[slideIndex-1].style.display = "block";
-          }
-
-          var myIndex = 0;
-          carousel();
-
-          function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-              x[i].style.display = "none";
-            }
-            myIndex++;
-            if (myIndex > x.length) {myIndex = 1}
-            x[myIndex-1].style.display = "block";
-            setTimeout(carousel, 5000);
-          }
-        </script> -->
         <script>
           $(function () {
 
