book img adding

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="css/zoomGlass.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/design.css">
-        <link rel="stylesheet" href="css/slideshow.css">
+        <!-- <link rel="stylesheet" href="css/slideshow.css"> -->
         <link rel="stylesheet" href="css/turn.css">
 
 
@@ -143,7 +143,7 @@
          <section id="feedbackSection">
 
            <div id ="bookFeedbackID" class="bookFeedback">
-             <img class="magniflier" src="img/openBook4.png"/>
+             <img class="magniflier" src="img/Book3.png"/>
            </div>
          </section>
               <!-- SECTION Feedback -->
@@ -209,7 +209,7 @@
         </div> -->
         <div class="modal-body">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 class="modal-title">À propos</h3>
+          <h3 class="modal-title"><b>À propos</b></h3>
           </br>
           <p class="bodyCenterPolice">
             Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’une Maîtrise FLE de l’Université d’Artois à Arras,
@@ -240,7 +240,7 @@
         </div> -->
         <div class="modal-body">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 class="modal-title">Enseignement</h3>
+          <h3 class="modal-title"><b>Enseignement</b></h3>
           </br>
           <p class="bodyCenterPolice">
             Ensemble nous allons apprendre la langue et la culture française !
@@ -260,7 +260,7 @@
 
           <p class="bodyCenterPolice"><img  src="icon/mail.png" class="iconPolice"></img>&nbsp;Cours dispensés en ligne, chez vous ou bien dans vos locaux professionnels.</p>
 
-          <p class="bodyCenterPolice">Pour toutes demandes de tarifs, merci de me contacter par e-mail en expliquant vos besoins.</p>
+          <p class="bodyCenterPolice"><b><u>Pour toutes demandes de tarifs, merci de me contacter par e-mail en expliquant vos besoins.</u></b></p>
           </br>
         </div>
         <!-- <div class="modal-footer">
@@ -280,21 +280,20 @@
         </div> -->
         <div class="modal-body">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h3 class="modal-title">Traduction</h3>
+          <h3 class="modal-title"><b>Traduction</b></h3>
           </br>
           <p class="bodyLeftPolice">
             Traduction professionnelle et adaptation interculturelle. Faites-moi confiance pour mieux comprendre une langue !
           </p>
-          </br>
           <p class="bodyLeftPolice">
           Langues proposées :
           </p>
           </br>
-          <p><b>Français : </b>Traduction et mise en page professionnelle du français vers le russe.</p>
+          <p><b><u>Français</u> : </b>Traduction et mise en page professionnelle du français vers le russe.</p>
           </br>
-          <p><b>Russe : </b>Traduction et mise en page professionnelle du russe vers le français.</p>
+          <p><b><u>Russe</u> : </b>Traduction et mise en page professionnelle du russe vers le français.</p>
           </br>
-          <p><b>Anglais : </b>Traduction et mise en page professionnelle de l’anglais vers le français ou vers le russe.</p>
+          <p><b><u>Anglais</u> : </b>Traduction et mise en page professionnelle de l’anglais vers le français ou vers le russe.</p>
         </div>
         <!-- <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
