Feedback book done

--- a/index.html
+++ b/index.html
@@ -143,7 +143,42 @@
          <section id="feedbackSection">
 
            <div id ="bookFeedbackID" class="bookFeedback">
-             <img class="magniflier" src="img/Book3.png"/>
+             <img class="magniflier" src="img/Book5WithText.png"/>
+             <!-- <div class="text-block">
+               <p>Anastasia is such a fun, caring,</p>
+               <p>enthusiastic, and rigorous teacher.</p>
+               <p>Anastasia ensures her students develop</p><p> strong French language skills</p>
+               <p>in all areas of reading, writing, </p><p>speaking, and listening by incorporating </p>
+               <p>methods and materials that would</p><p> work best for them.</p>
+               <br/><br/>
+               <p class="text-right">Sanghee Lee</p>
+            </div>
+            <div class="text-block2">
+              <p>Rapide dans l'exécution.</p>
+              <p>Travail conforme à mes attentes </p>
+              <p>et à celles du webmaster. </p>
+              <p>Tarifs plus que convenables. Je recommande</p>
+              <br/><br/>
+              <p class="text-right">Restaurant l’Insoumise,</p>
+              <p class="text-right">Paris (traduction FR-RU)</p>
+           </div>
+           <div class="text-block3">
+             <p>J'ai collaboré avec Anastasia en faisant appel</p>
+             <p> à elle en tant que formatrice pour un groupe</p>
+             <p> de stagiaires FLE niveau A1 à A2.</p>
+             <p> Elle a su relever le défi avec brio.</p>
+             <p> Son professionnalisme, sa rigueur et sa </p>
+             <p>bienveillance ont su porter le groupe tout</p>
+             <p> au long des 3 mois du parcours. </p>
+             <p>Anastasia applique des méthodes d'apprentissage</p><p> qui favorisent les échanges</p>
+             <p> à travers toutes sortes d'activités pédagogiques, </p>
+             <p>culturelles et ludiques.</p>
+             <p> Je referai appel à elle sans</p>
+             <p>hésiter quand l'occasion se présentera !</p>
+             <br/><br/>
+             <p class="text-right">Florence CROUZET,</p>
+             <p class="text-right">Human Booster</p>
+          </div> -->
            </div>
          </section>
               <!-- SECTION Feedback -->
