--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
                      <!-- SECTION CONTACT -->
                      <div id="contact" class="contact-info">
                          <!-- <div class="container"> -->
-                                 <h1>Nous rendre visite</h1>
+                                 <h1>Informations personnelles</h1>
                                      <address>
-                                         <strong>Anastasia Teaching</strong><br>
+                                         <strong>Anastasia Vasina</strong><br>
                                          23 rue de Raguse<br>
                                          34000, Montpellier<br>
                                          Tel: (+33) 6 XX XX XX XX
@@ -469,9 +469,10 @@
         <script type="text/javascript" src="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="js/zoomEffect.js"></script>
+        <script src="js/validate.js"></script>
 
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
 
 
