bgr img responsive cover fix

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </section>
 
 
-          <div class="section" id="sectionService">
+          <div id="sectionService" class="section">
             <!-- SECTION SERVICES  -->
             <section id="sectionService">
 
@@ -459,7 +459,6 @@
   <!-- ================================= End MODALS ================================= -->
 
         <!-- Script Javascript -->
-        <!-- <script src="bootstrap/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="bootstrap/js/plugins.js"></script>
         <script src="bootstrap/js/main.js"></script>
 		    <script src="bootstrap/js/bootstrap.js"></script> -->
