apdate gif and  feedback book done

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
          <section id="feedbackSection">
 
            <div id ="bookFeedbackID" class="bookFeedback">
-             <img class="magniflier" src="img/Book5WithText.png"/>
+             <img class="magniflier" src="img/BookWithTextImg.png"/>
              <!-- <div class="text-block">
                <p>Anastasia is such a fun, caring,</p>
                <p>enthusiastic, and rigorous teacher.</p>
